packages/fuels-macros/tests/ui/abigen_macro/duplicate_attribute.stderr
error: Original defined here:
 --> tests/ui/abigen_macro/duplicate_attribute.rs:4:5
  |
4 |     abi = "some-abi.json",
  |     ^^^

error: Duplicate!
 --> tests/ui/abigen_macro/duplicate_attribute.rs:5:5
  |
5 |     abi = "some-abi2.json",
  |     ^^^

error: Duplicate!
 --> tests/ui/abigen_macro/duplicate_attribute.rs:7:5
  |
7 |     abi = "some-abi3.json",
  |     ^^^
